<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/return_cart"
        android:textColor="#0E0D0D"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="73dp"
        android:layout_height="43dp"
        android:layout_below="@id/textView10"
        android:layout_marginTop="93dp"
        android:gravity="center"
        android:text="@string/cart_id"
        android:textSize="18sp"
        android:textColor="#0E0D0D"/>

    <EditText
        android:id="@+id/etCartId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="93dp"
        android:layout_toRightOf="@id/textView11"
        android:ems="10"
        android:inputType="text"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/textView11"
        android:autofillHints=""
        tools:targetApi="o"
        android:textColor="#0E0D0D"/>

    <EditText
        android:id="@+id/etLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="180dp"
        android:layout_toRightOf="@id/textView11"
        android:ems="10"
        android:inputType="text"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/textView11"
        android:importantForAutofill="no"
        android:textColor="#0E0D0D"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="73dp"
        android:layout_height="43dp"
        android:layout_below="@id/textView11"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/location"
        android:textSize="18sp"
        android:textColor="#0E0D0D"/>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_marginTop="27dp"
        android:text="@string/return_date"
        android:textSize="18sp"
        android:textColor="#0E0D0D"/>

    <TextView
        android:id="@+id/textView18"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@id/tvDate"
        android:layout_toRightOf="@id/tvDate"
        android:text="@string/return_time"
        android:textSize="18sp"
        android:textColor="#0E0D0D"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="90dp"
        android:layout_height="24dp"
        android:layout_below="@id/textView10"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@id/textView16"
        android:layout_toRightOf="@id/textView16"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#0E0D0D"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="77dp"
        android:layout_height="24dp"
        android:layout_below="@id/textView10"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="27dp"
        android:layout_toEndOf="@id/textView18"
        android:layout_toRightOf="@id/textView18"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#0E0D0D"/>

    <Button
        android:id="@+id/btnReturnCart"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView10"
        android:layout_centerInParent="true"
        android:layout_marginTop="318dp"
        android:text="@string/return_cart"
        android:textColor="#FF9800"
        android:background="@drawable/user_button"/>

</RelativeLayout>
